--- a/styles.css
+++ b/styles.css
@@ -3,46 +3,114 @@
     margin: 0;
     padding: 0;
 }
+img {
+    height: 30px;
+    width: 30px;
+}
+button {
+    background-color: transparent;
+    border: transparent;
+}
+.user-profile .profile-photo, .trending-user-photo {
+    
+}
 body {
     display: grid;
-    grid-template-columns: 1fr 6fr;
+    grid-template-columns: 300px 1fr;
 }
     .side-pane {
+        padding-left: 5%;
         grid-column: 1;
+        display: grid;
+        grid-template-rows: auto 1fr;
     }
         .page-title {
-         display: flex;
+            display: flex;
+            align-items: center;
+            gap: 20px;
         }
+            .page-title img {
+                height: 60px;
+                width: 50px;
+            }
+        .sidebar {
+            padding-left: 2.5%;
+            display: grid;
+            grid-template-rows: auto 1fr;
+            gap: 50px ;
+        }
+            .nav-menu a, .user-preferences a {
+                display: grid;
+                grid-template-columns: auto 1fr;
+                gap: 20px;
+                align-items: center;
+            }
+                .nav-menu li a img, .user-preferences li a img {
+                    grid-column: 1;
+                }
+                .nav-menu li a span, .user-preferences li a span {
+                    grid-column: 2;
+                }
     .main-pane {
         grid-column: 2;
-
         display: grid;
-        grid-template-rows: 1fr 3fr;
+        grid-template-rows: 150px 1fr;
     }
          .header {
             display: grid;
             grid-template-rows: 1fr 2fr;
+            padding: 10px 5% 0 5%;
         }
             .header-row1 {
                 display: grid;
                 grid-template-columns: 3fr 2fr;
             }
+                .search-bar {
+                    display: flex;
+                    align-items: center;
+                }
+                    #search {
+                        width: 100%;
+                    }
+                    .search-bar img, #user-greeting .profile-photo {
+                        margin-right: 10px;   
+                    }
+                .user-profile {
+                    display: flex;
+                    align-items: center;
+                    justify-content: end;
+                    padding-right: 5%;
+                    gap: 5%; 
+                }
+                    .notifications {
+
+                    }
+                    .user-profile .profile-photo {
+                        height: 45px;
+                        width: 45px;
+                    }
+                    .profile-name {
+                        
+                    }
             .header-row2 {
                 display: grid;
                 grid-template-columns: 3fr 2fr;
+                align-items: center;
             }
                 #user-greeting {
-                    display: grid;
-                    grid-template-columns: 1fr 3fr;
+                    display: flex;
+                    
                 }
-                    .profile-photo {
-                        grid-column: 1;
+                    #user-greeting .profile-photo {
+                        height: 80px;
+                        width: 80px;
+                        align-self: flex-end;
                     }
                     .greeting {
-                        grid-column: 2;
+                        align-self: center;
                     }
                         .greeting-text {
-
+                         padding-bottom: 5px;
                         }
                         .profile-name {
                             
@@ -50,49 +118,115 @@ body {
                         .profile-username {
                             
                         }
+                .actions {
+                    display: flex;
+                    justify-content: center;
+                    justify-content: space-evenly;
+                    align-items: center;
+                }
         .main-content {
+            padding-top: 30px;
             display: grid;
-            grid-template-columns: 5fr 2fr;
-            
+            grid-template-columns: 3fr 1fr;
+            padding-left: 2.5%;
+            padding-right: 5%;
+            padding-bottom: 5%;
         }
+            .main-content-title {
+                padding-bottom: 10px;
+            }
             .middle-area {
+                padding-right: 2.5%;
             }
                 .user-projects {
                     display: grid;
-                    grid-template-columns: 1fr 1fr;
+                    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* I need a minimum, there has to be a point it can no longer shrink, how do you determine that? */
+                    gap: 20px;
                 }
                     .project-card {
+                        padding: 20px;
+                        border-left: 5px solid yellow;
+
                         display: grid;
-                        grid-template-rows: 1fr 1fr 1fr;
+                        grid-template-rows: 1fr 3fr 1fr;
                     }
+                        .project-title {
+                            
+                        }
+                        .project-description {
+                            
+                        }
+                        .interactions {
+                            display: flex;
+                            justify-content: end;
+                            gap: 5%;
+                        }
+                        .interactions button {
+
+                        }
             .right-area {
             }
                 .announcements {
+                    padding: 20px;
                     display: grid;
-                    grid-template-rows: 1fr 1fr 1fr;
+                    grid-template-rows: auto 1fr;
+                    row-gap: 20px;
+                    
                 }
                     .announcement-card {
-
+                        position: relative;
                     }
+                        #announcement-card1::after, #announcement-card2::after {
+                            position: absolute;
+                            background-color: lightgrey;
+                            content: ""; /* background 'border' */
+                            width: 100%; /* line width */
+                            height: 1px; /* line thickness */
+                            bottom: -10px; /* place content halfway through the row-gap */
+                        }
                         .announcement-title {
 
                         }
                         .announcement-content {
 
                         }
+                #title-trending {
+                    padding-top: 5%;
+                }
                 .trending-users {
                     display: grid;
                     grid-template-rows: 1fr 1fr 1fr 1fr;
+                    row-gap: 20px;
+                    padding: 20px;
                 }
                     .trending-card {
                         display: grid;
-                        grid-template-columns: 1fr 2fr;
+                        grid-template-columns: 1fr 4fr;
+                        grid-template-rows: 1fr 1fr;
+                        column-gap: 10px; /* can this be specifically only for the column and not also the row? */
                     }
-                        .trending-user-profile-photo {
+                        #trending-card1 {
+                            
+                        }
+                        #trending-card2 {
+                            
+                        }
+                        #trending-card3 {
+                            
+                        }
+                        #trending-card4 { 
+                            
+                        }
+                        .trending-user-photo {
                             grid-column: 1;
+                            grid-row: 1 / span 2;
+                            justify-self: center;
+                            height: auto;
+                            width: 100%;
                         }
                         .trending-user-username {
                             grid-column: 2;
+                            align-content: end;
                         }
                         .trending-user-bio {
                             grid-column: 2;
