--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+:root {
+    --descriptive-text: grey;
+}
 * {
     box-sizing: border-box;
     margin: 0;
@@ -11,9 +14,6 @@ button {
     background-color: transparent;
     border: transparent;
 }
-.user-profile .profile-photo, .trending-user-photo {
-    
-}
 body {
     display: grid;
     grid-template-columns: 300px 1fr;
@@ -23,11 +23,13 @@ body {
         grid-column: 1;
         display: grid;
         grid-template-rows: auto 1fr;
+        background-color: #1992d4;
     }
         .page-title {
             display: flex;
             align-items: center;
             gap: 20px;
+            color: white;
         }
             .page-title img {
                 height: 60px;
@@ -44,6 +46,7 @@ body {
                 grid-template-columns: auto 1fr;
                 gap: 20px;
                 align-items: center;
+                color: white;
             }
                 .nav-menu li a img, .user-preferences li a img {
                     grid-column: 1;
@@ -71,6 +74,7 @@ body {
                 }
                     #search {
                         width: 100%;
+                        background-color: #e2e8f0;
                     }
                     .search-bar img, #user-greeting .profile-photo {
                         margin-right: 10px;   
@@ -124,13 +128,19 @@ body {
                     justify-content: space-evenly;
                     align-items: center;
                 }
+                    .actions > button {
+                        background-color: #1992d4;
+                        color: white;
+                    }
         .main-content {
             padding-top: 30px;
             display: grid;
             grid-template-columns: 3fr 1fr;
+            padding: 2.5% 5% 5% 2.5%;
             padding-left: 2.5%;
             padding-right: 5%;
             padding-bottom: 5%;
+            background-color: #e2e8f0;
         }
             .main-content-title {
                 padding-bottom: 10px;
@@ -145,16 +155,16 @@ body {
                 }
                     .project-card {
                         padding: 20px;
-                        border-left: 5px solid yellow;
-
+                        border-left: 7.5px solid #f0b429;
                         display: grid;
                         grid-template-rows: 1fr 3fr 1fr;
+                        background-color:#ffffff;
                     }
                         .project-title {
                             
                         }
                         .project-description {
-                            
+                            color: var(--descriptive-text);
                         }
                         .interactions {
                             display: flex;
@@ -171,7 +181,7 @@ body {
                     display: grid;
                     grid-template-rows: auto 1fr;
                     row-gap: 20px;
-                    
+                    background-color: #ffffff;
                 }
                     .announcement-card {
                         position: relative;
@@ -188,7 +198,7 @@ body {
 
                         }
                         .announcement-content {
-
+                            color: var(--descriptive-text);
                         }
                 #title-trending {
                     padding-top: 5%;
@@ -198,6 +208,7 @@ body {
                     grid-template-rows: 1fr 1fr 1fr 1fr;
                     row-gap: 20px;
                     padding: 20px;
+                    background-color: #ffffff;
                 }
                     .trending-card {
                         display: grid;
@@ -230,4 +241,5 @@ body {
                         }
                         .trending-user-bio {
                             grid-column: 2;
+                            color: var(--descriptive-text);
                         }
